--- a/client/src/styles/product.scss
+++ b/client/src/styles/product.scss
@@ -4,11 +4,12 @@
     // margin: 20px 5px;
     text-align: center;
     overflow-x: scroll;
+    margin: 10px;
   }
   .product {
     margin: 4px;
-    width: 16%;
-    min-width: 140px;
+    width: 12%;
+    min-width: 160px;
     border: 1px solid gray;
     padding: 10px;
     border-radius: 10px;
