--- a/client/src/styles/cart.scss
+++ b/client/src/styles/cart.scss
@@ -1,14 +1,15 @@
 .cart {
-  
-    background-color: azure ;
+     padding-top: 3rem;
+     margin-bottom: 1rem;
+     background-color: azure ;
      display: flex;
      flex-direction: column;
      text-align: center;
      
    }
    .size{
-     width: 100vw;
-     overflow-y: scroll;
+     width: 99vw;
+     overflow-x: scroll;
    }
    .scroll{
      margin-left: 10px;
@@ -48,6 +49,25 @@
      display: flex;
      flex-direction: column;
      justify-content: center;
+     .inp{
+      >input{
+        width: 100%;
+        padding: 0.8rem;
+        background-color: white;
+        border: 1px solid gray;
+        border-radius: 5px;
+        margin: 0.5rem 0;
+        outline: none;
+      }
+      >button{
+        width: 100%;
+        padding: 0.8rem;
+        border: 1px solid gray;
+        border-radius: 5px;
+        margin: 0.5rem 0;
+        outline: none;
+      }
+     }
    }
    .cart-add .subtotal td{
      border: 1px solid gray;
@@ -95,3 +115,4 @@
         padding:0 5px;
     }
    }
+   
