--- a/client/src/styles/product.scss
+++ b/client/src/styles/product.scss
@@ -1,28 +1,21 @@
-.products {
-    display: flex;
-    // flex-wrap: wrap;
-    // margin: 20px 5px;
-    text-align: center;
-    overflow-x: scroll;
-    margin: 10px;
-  }
-  .product {
-    margin: 4px;
+
+.product {
     width: 12%;
-    min-width: 160px;
+    min-width: 170px;
     border: 1px solid gray;
-    padding: 5px;
     border-radius: 5px;
   }
   .product-images img {
     cursor: pointer;
     width: 100%;
+    min-width: 168px;
     border-radius: 3px;
-    border: 1px solid gray;
+    border-bottom: 1px solid gray;
   }
   
   .product-describe {
     display: flex;
+    padding: 0 3px;
     flex-direction: column;
   }
   .product .product-describe {
@@ -36,24 +29,29 @@
     .shop {
       display: flex;
       justify-content: space-between;
-      padding-top: 10px;
     }
   }
-  
   .shop-cart {
     cursor: pointer;
   }
   
   .shop button {
-    padding: 4px;
     width: 40px;
-    border: 4px solid transparent;
+    border: transparent;
     background-color: transparent;
-    font-size: 23px;
+    font-size: 22px;
     cursor: pointer;
+    border: 4px solid transparent;
   }
   .shop button:active {
-    font-size: 27px;
-    border: none;
+    border: 1px solid transparent;
+    font-size: 26px;
   }
-  
+  .flex{
+    padding: 1rem ;
+    padding-top: 0;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fill, minmax(160px, 150px));
+    gap: 15px;
+}
